# IM-Simple

./: CMakeLists.txt  README.md  main.cpp
common/: CMakeLists.txt  global.cpp  global.h  singleton.h  threadpool.cpp  threadpool.h
database/: CMakeLists.txt  mysqldao.cpp  mysqldao.h  mysqlmanager.cpp  mysqlmanager.h  mysqlpool.cpp  mysqlpool.h  redismanager.cpp  redismanager.h
network/: CMakeLists.txt  epoll.cpp  epoll.h  httpmanager.cpp  httpmanager.h  networkmanager.cpp  networkmanager.h  tcpsocket.cpp  tcpsocket.h
